# cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
keys/: clientInfo.json
src/: CMakeLists.txt  apiWrapper.cpp  apiWrapper.hpp  card.cpp  card.hpp  collection.cpp  collection.hpp  deck.cpp  deck.hpp  userWrapper.cpp  userWrapper.h
test/: CMakeLists.txt  cardTest.cpp
test/output/: korvold_fae_cursed_king.json
